	    + Added subnet usage result for each subnet in section ;
    + Widgets:
        + New threshold widget;
        + New inactive hosts widget;
    + PowerDNS:
        + Default domain for PTR records (if hostname is not set);
        + When removing IP address additional option that removes all associated PDNS records (ip and hostname);
    + Permit normal users to manage VLANs;
    + jQuery tables;


	Bugfixes:
	----------------------------
	+ PowerDNS regenerate PTR records now only updates current subnet (before whole zone);
	+ Fixed visual bug on 32-bit systems;
	+ Changed default timestamp from 0000-00-00 00:00:00 to 1970-01-01 00:00:01 to avoid SQL install errors if strict mode;

== 1.20.1

	Translations:
	----------------------------
    + French translation updated to verson 1.2;
    + German translation updated to verson 1.2;

	Bugfixes:
	----------------------------
    + Fixed upgrade bug that selected invalid auth method for AD/LDAP users;
    + Fixed LDAP problems after 1.2 upgrade;
    + Fixed PowerDNS Slave with multiple masters delimiter error;
    + Fixed owerDNS PTR records not being updated automatically;
    + Fixed csrf cookie bug when editing folder;
    + Fixed csrf cookie bug when truncationg subnet;
    + Fixed invalid code for API crypt method;
    + Fixed strange headings font display in Firefox;
    + Fixed invalid proxy settings in config.dist.php;
    + Fixed search same hostnames in db link form address table;
    + Fixed import subnet bug caused by fw object;
    + Fixed Subnet Import (Preview button > no action);

== 1.20

	New features:
	------------
	+ Added multiple simultaneous authentication methods (Apache, AD, LDAP, Radius, NetIQ);
	+ Added fping scanning support;
	+ Added selectable scanning type (ping/pear/fping);
	+ Added L2 domains;
	+ Added option to define address as default GW for subnet;
	+ Added customizable address tags with compressed option;
	+ Added temporary subnet / address shares;